# LearnOpenGL-Project-Template

./: CMakeLists.txt  README.md
src/: callbacks.cpp  callbacks.hpp  main.cpp  shader.cpp  shader.hpp  triangle.cpp  triangle.hpp
